# pokepalette

./: .gitignore  .pre-commit-config.yaml  2  Cargo.toml  LICENSE  README.md  flake.nix  pokemon.json
.github/workflows/: ci.yml  release.yml
_src/: color.rs  distance.rs  jsonify.rs  wal.rs
assets/: pokemon.json
data/: pokemon.txt  sprites.json
docs/: README.md
src/: cli.rs  colorscheme.rs  distance.rs  flags.rs  jsonify.rs  lib.rs  main.rs  palette.rs  quantize.rs  rgb.rs  sprite.rs  wal.rs
src/cli/: args.rs  output.rs
src/colorquant/: distance.rs  mod.rs  quantize.rs
src/pokemondatabase/: mod.rs
src/sprite/: form.rs  mod.rs  parser.rs
