[package]
name = "pokepalette"
version = "0.1.0"
edition = "2021"
default-run = "pokepalette"

[dependencies]
image = "0.25.6"
lab = "0.11.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
