[package]
name = "pokepalette"
version = "0.1.0"
edition = "2021"
default-run = "pokepalette"
description = "Find Pokemon that match your image's color palette"
authors = ["arturo"]
license = "MIT"
repository = "https://github.com/aig77/pokepalette"
readme = "README.md"
keywords = ["pokemon", "color", "palette", "cli", "image"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
image = "0.25.6"
lab = "0.11.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
indicatif = "0.18.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }
